<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>underwater_target_bringup</name>
  <version>0.1.0</version>
  <description>
    System integration and launch package for the underwater target-following stack.
    Provides launch files for full-system deployment, detection-only testing,
    and demonstration with visualisation.
  </description>
  <maintainer email="maintainer@example.com">UUVTracking Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>underwater_target_detection</exec_depend>
  <exec_depend>underwater_target_control</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
