<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>underwater_target_msgs</name>
  <version>0.1.0</version>
  <description>
    Custom ROS 2 message definitions for the underwater target-following system.
    Provides TargetDetection, TargetTrackingState, and TargetError message types.
  </description>
  <maintainer email="maintainer@example.com">UUVTracking Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
